<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/dark_onBackground"
        android:orientation="vertical"
        tools:context=".ui.calibration.CalibrationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/order"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="3"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/calibration_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1.5"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/use"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1.5"
                android:background="@color/light_primary"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/no_calibration"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:isScrollContainer="true"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            tools:listitem="@layout/item_calibration">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</layout>

