<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/light_onPrimary"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/switch_function"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/motor"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/motor_setting"
            android:textSize="16sp"
            app:cornerRadius="50dp"
            app:rippleColor="@color/purple_700" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calibration"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/motor"
            android:layout_alignParentStart="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/calibration_setting"
            android:textSize="16sp"
            app:cornerRadius="50dp"
            app:rippleColor="@color/purple_700" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/calibration"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="50dp"
            app:rippleColor="@color/purple_700"
            app:strokeColor="@color/light_primary"
            app:strokeWidth="3dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>