<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_home">

    <data>

        <variable
            name="viewModel"
            type="com.zktony.www.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_reset"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/btn_reset"
            app:layout_constraintBottom_toTopOf="@+id/btn_pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/btn_pause"
            app:layout_constraintBottom_toTopOf="@+id/btn_insulating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reset"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pause" />

        <ImageButton
            android:id="@+id/btn_insulating"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/btn_defrost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pause"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_insulating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insulating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_insulating" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>