<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/reset"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/btn_reset"
            app:layout_constraintBottom_toTopOf="@+id/pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/btn_pause"
            app:layout_constraintBottom_toTopOf="@+id/insulating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pause" />

        <ImageButton
            android:id="@+id/insulating"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/btn_defrost"
            app:layout_constraintBottom_toTopOf="@+id/lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pause"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_insulating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insulating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insulating" />

        <ImageButton
            android:id="@+id/lock"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/btn_lock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insulating"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lock" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>