<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_home">

    <data>

        <variable
            name="viewModel"
            type="com.zktony.www.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_select"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/dark_onPrimaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_program"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:insetTop="4dp"
                android:insetBottom="2dp"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/light_onPrimary" />

            <com.zktony.www.views.MarqueTextView
                android:id="@+id/tv_actions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="26dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_icon"
                app:layout_constraintStart_toEndOf="@+id/btn_program"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="26dp"
                android:text="@string/a"
                android:textAlignment="center"
                android:textColor="@color/light_primary"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/dash_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/con_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/start"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/light_error"
            app:strokeColor="@color/dark_onBackground"
            app:strokeWidth="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_error"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/stop"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/light_primary"
            app:strokeColor="@color/dark_onBackground"
            app:strokeWidth="5dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>